edited-remove dummy, sticky header added

--- a/public/kits.pixel-show.com/careerster/template-kit/home-1/index.html
+++ b/public/kits.pixel-show.com/careerster/template-kit/home-1/index.html
@@ -541,7 +541,7 @@ img.emoji {
 					<div class="elementor-button-wrapper">
 			<a class="elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">2018 - Present</span>
+						<span class="elementor-button-text">September, 2020 - Present(Remote)</span>
 		</span>
 					</a>
 		</div>
@@ -549,16 +549,20 @@ img.emoji {
 				</div>
 				<div class="elementor-element elementor-element-6d5a79e8 elementor-widget elementor-widget-heading" data-id="6d5a79e8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default">Art Director
+			<h4 class="elementor-heading-title elementor-size-default">Backend Web Developer
 </h4>		</div>
 				</div>
 				<div class="elementor-element elementor-element-74215966 elementor-widget elementor-widget-heading" data-id="74215966" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h6 class="elementor-heading-title elementor-size-default">Company Inc.</h6>		</div>
+			<h6 class="elementor-heading-title elementor-size-default">Future Junction </h6>		</div>
 				</div>
 				<div class="elementor-element elementor-element-c89c396 elementor-widget elementor-widget-text-editor" data-id="c89c396" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p></div>
+					<div class="elementor-text-editor elementor-clearfix">
+						<p>
+							Working in Backend using laravel and mysql. Participate in design and impliment of database and application. Coding, testing and colaborating with other developers. 
+						</p>
+					</div>
 				</div>
 				</div>
 						</div>
